Fix to some layout issues. Started but didn't really do anything for admin.

--- a/resources/sass/partials/_structure.sass
+++ b/resources/sass/partials/_structure.sass
@@ -15,18 +15,15 @@ body
   overflow-y: auto
 
 .middle-column
-  padding: 5em 1em 1em
-
-.right-column
-  height: calc(100% - 2em)
+  margin-left: 300px
   box-sizing: border-box
-  padding: 2.2em 0 1em
-  background: transparentize(darken($background, 5), .5)
-  overflow-y: auto
-  position: absolute
-  top: 2em
-  h1, h2, p
-    padding: .5em 10px
+  .content
+    padding: 5em 1em 1em
+
+.content
+  padding: 2em 1em 1em
+  margin-left: 50px
+
 
 .no-select
   -webkit-touch-callout: none
@@ -201,7 +198,3 @@ ul
 
 *:focus
   outline: 0 none !important
-
-.content
-  margin-left: 300px
-  box-sizing: border-box
